--- a/rt.html
+++ b/rt.html
@@ -99,19 +99,23 @@
           for (let x = 0; x < image.width; x++) {
             const COORDINATES = new Vec2(x / image.width - 0.5,
                 y / image.height - 0.5);
-            const RAY_CENTER = new Vec3(0, 1, 0);
-            const RAY_DIRECTION = new Vec3(FILM_WIDTH * COORDINATES.x,
-                FILM_HEIGHT * COORDINATES.y, FOCAL_LENGTH).normalize();
+            const RAY_CENTER = new Vec3(0, 0, 0);
+            const RAY_DIRECTION = Vec3.normalize(
+                new Vec3(FILM_WIDTH * COORDINATES.x,
+                  FILM_HEIGHT * COORDINATES.y, FOCAL_LENGTH));
             const RAY = new Ray(RAY_CENTER, RAY_DIRECTION);
 
             let color = new Vec3(0, 0, 0);
 
             // Rendering
-            const SPHERE_CENTER = new Vec3(0, 0.5, -5);
+            const SPHERE_CENTER = new Vec3(0, 0, 5);
             const SPHERE_RADIUS = 1.0;
             const SPHERE = new Sphere(SPHERE_CENTER, SPHERE_RADIUS);
-            if (SPHERE.collidesWithRay(RAY)) {
-              color.z = 1;
+            const INTERSECTION_POINT = SPHERE.getIntersectionPointWithRay(RAY);
+            if (INTERSECTION_POINT !== null) {
+              const NORMAL =
+                SPHERE.getNormalForIntersectionPoint(INTERSECTION_POINT);
+              color = NORMAL;
             }
 
             // Set color
