--- a/rt.html
+++ b/rt.html
@@ -90,7 +90,6 @@
         let c = canvas.getContext('2d');
         let image = c.createImageData(canvas.width, canvas.height);
 
-        const sRGB_GAMUT = 1 / 2.2;
         const FOCAL_LENGTH = 0.028;
         const FILM_WIDTH = 0.036;
         const FILM_HEIGHT = 0.024;
@@ -123,9 +122,9 @@
 
             // Set color
             const HEAD_INDEX = (y * image.width + x) * 4;
-            image.data[HEAD_INDEX] = Math.pow(color.x, sRGB_GAMUT) * 255;
-            image.data[HEAD_INDEX + 1] = Math.pow(color.y, sRGB_GAMUT) * 255;
-            image.data[HEAD_INDEX + 2] = Math.pow(color.z, sRGB_GAMUT) * 255;
+            image.data[HEAD_INDEX] = color.x * 255;
+            image.data[HEAD_INDEX + 1] = color.y * 255;
+            image.data[HEAD_INDEX + 2] = color.z * 255;
             image.data[HEAD_INDEX + 3] = 255;
           }
         }
