--- a/rt.html
+++ b/rt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Canvas Ray Tracer</title>
 </head>
 <body>
   <canvas id="canvas" width="600" height="400"></canvas>
